# runtime-conditions-profiles

./: .gitignore  README.md  go.work  go.work.sum
demos/: README.md
demos/apps/request-logger-http-python/: Dockerfile  pyproject.toml
demos/apps/request-logger-http-python/src/request_logger_http/: app.py  conditions.py  models.py
docs/: intro.md  sixth-draft.md  (+1 more)
python/profiler/: README.md  main.py  profiler.py  pyproject.toml
python/profiler/runtimeconditions_profiler/: __init__.py  cli.py  constants.py  errors.py  main.py  models.py  util.py  yamlio.py
python/profiler/runtimeconditions_profiler/extension/: __init__.py  artifact_validator.py  definition.py  manifest_validator.py  vocabulary.py
python/profiler/runtimeconditions_profiler/manifest/: __init__.py  mapping.py  parser.py
python/profiler/runtimeconditions_profiler/profile/: __init__.py  binding.py  extractor.py  imports.py  validator.py  writer.py
python/profiler/runtimeconditions_profiler/project/: __init__.py  discovery.py
python/profiler/runtimeconditions_profiler/source/: __init__.py  inspector.py  python.py
python/profiler/testdata/authoring/bad-class-or-schema-arg-invalid/: fixture.yaml
python/profiler/testdata/authoring/bad-string-arg-index-invalid/: fixture.yaml
python/profiler/testdata/authoring/binding-kind-mismatch-invalid/: fixture.yaml
python/profiler/testdata/golden/: declarative-app.golden.yaml  request-logger-http-python.golden.yaml  semantic-resolution.golden.yaml  unused-extension.golden.yaml  wildcard-cache.golden.yaml
python/profiler/tests/: test_profiler.py
(+485 files in other folders)
